# MakefileStudy

C_build/: CMakeLists.txt  Makefile  README.md  compile_commands.json  hello  helloworld.c  main.c
code/C_build/: CMakeLists.txt  Makefile  hellolinux.c  helloworld.c
code/Makefile_Variable/: CMakeLists.txt  Makefile  add.c  defs.h  minus.c  variable.c
docs/: [从零开始学Makefile] GCC介绍和C程序编译原理.typ  [从零开始学Makefile] Makefile基础以及书写规则.typ  template.typ
